# Arog-Log-veiwer

./: .gitignore  .license  ArgoLogViewer.spec  BUILD-INTEL.md  BUILD.md  BUILD_MACOS.md  COPYRIGHT  CREATE_MACOS_ICON.md  FEATURES_GUIDE.md  ICONS.md  INSTALLATION.md  LICENSE.txt  MACOS_INSTALLATION.md  MACOS_SECURITY_SUMMARY.md  PERFORMANCE_FIX.md  QUICKSTART-INTEL.md  README.md  RELEASE.md  RELEASE.sh  SECURITY.md  SECURITY_FIXES.md  SECURITY_QUICKSTART.md  build-intel-and-release.sh  build_linux.sh  build_macos.sh  build_macos_arm.sh  build_macos_intel.sh  build_macos_universal2.sh  build_windows.bat  create_macos_icon.sh  env.example  installer_windows.iss  pyproject.toml  refresh_icon_cache.bat  release-dmg-only.sh  release-only.sh  release-zip-only.sh  requirements.txt  run.bat  run.sh
.github/workflows/: build-all-platforms.yml  build-macos.yml  build-release.yml
MD/: FEATURES_GUIDE.md  VERSION_MANAGEMENT.md
app/: config.py  integrity_check.py  logging_config.py  main.py  themes.py  update_checker.py
app/docs/images/: .gitkeep
app/kubernetes/: __init__.py  operations.py
app/ssh/: __init__.py  argo_worker.py  connection_manager.py
app/ui/: __init__.py  main_window.py
