[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "argo-log-viewer"
version = "1.0.0"
description = "Production-grade desktop GUI for viewing Argo Workflow logs via SSH"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Harshmeet Singh", email = "harshmeetsingh010@gmail.com"},
]
keywords = ["argo", "kubernetes", "ssh", "logs", "gui", "desktop"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: System :: Monitoring",
    "Topic :: System :: Systems Administration",
]

dependencies = [
    "paramiko>=4.0.0",
    "PySide6>=6.10.0",
    "cryptography>=46.0.0",
    "bcrypt>=5.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
argo-log-viewer = "app.main:main"

[tool.setuptools]
packages = ["app", "app.ssh", "app.kubernetes", "app.ui"]

[tool.setuptools.package-data]
app = ["py.typed"]
